# rustbook

./: README.md  rectangles.cc
collections/src/: company.rs  main.rs  utils.rs
guessing_game/src/: main.rs
journey_screenshots/: Cargo.toml
journey_screenshots/src/: actions.rs  browser.rs  cli.rs  main.rs
playground/: Cargo.toml  users.db
playground/migrations/: 0001_create_users_table.up.sql
playground/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs  tests.rs
restaurant/src/front_of_house/: hosting.rs
variables/src/: main.rs
