[package]
name = "journey_screenshots"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Chromiumoxide provides a Puppeteer-like API in Rust
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
serde_json = "1"
